style: rep page warning color & fix mobile overflow

--- a/src/views/components/representative-uptime/representative-uptime.styl
+++ b/src/views/components/representative-uptime/representative-uptime.styl
@@ -13,6 +13,7 @@
 .representative__uptime-metrics
   display flex
   justify-content space-around
+  flex-wrap wrap
 
 .representative__uptime-metrics-metric
   padding 16px
@@ -30,4 +31,4 @@
   &.offline
     color #ee6666
   &.warning
-    color #FFEF4A
+    color #ffac33
