--- a/src/views/pages/account/account.styl
+++ b/src/views/pages/account/account.styl
@@ -59,6 +59,7 @@
   flex 3
   align-items center
   justify-content center
+  padding 0 8px
 
 .account__balance
   display flex
@@ -106,3 +107,5 @@
 @media (max-width 500px)
   .account__address
     font-size 11px
+    overflow-wrap anywhere
+    min-width 100px
